Adding release plugin

--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,27 @@
 		</dependency>
 	</dependencies>
 
+	<scm>
+		<connection>scm:git:https://github.com/ppopli/learn.git</connection>
+		<url>https://github.com/ppopli/learn</url>
+		<developerConnection>scm:git:https://github.com/ppopli/learn.git</developerConnection>
+	</scm>
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<releaseProfiles>releases</releaseProfiles>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
