--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>learn</artifactId>
-	<version>0.0.40</version>
+	<version>0.0.40-SNAPSHOT</version>
 	<name>learn</name>
 	<description>Demo project for Spring Boot</description>
 
