--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,13 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>learn</artifactId>
-	<version>0.0.44-SNAPSHOT</version>
+	<version>${global.project.version}</version>
 	<name>learn</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<global.project.version>0.0.44-SNAPSHOT</global.project.version>
 	</properties>
 
 	<dependencies>
