--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>learn</artifactId>
-	<version>0.0.44</version>
+	<version>0.0.45-SNAPSHOT</version>
 	<name>learn</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -62,7 +62,7 @@
 		<connection>scm:git:https://github.com/ppopli/learn.git</connection>
 		<url>https://github.com/ppopli/learn</url>
 		<developerConnection>scm:git:https://github.com/ppopli/learn.git</developerConnection>
-	  <tag>v0.0.44</tag>
+	  <tag>v0.0.39</tag>
   	</scm>
 
 	<distributionManagement>
